--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ nav {
     background-color: rgb(254, 247, 226);
 }
 
+span {
+    text-align: center;
+}
+
 ul {
     list-style-type: none;
     display: flex;
@@ -117,7 +121,7 @@ h3 {
     font-weight: 800;
 }
 h4 {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 700;
 }
 
